--- a/ExoPlayerWrapper/ExoPlayerWrapper/Views/MainPage.xaml
+++ b/ExoPlayerWrapper/ExoPlayerWrapper/Views/MainPage.xaml
@@ -4,6 +4,8 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:controls="clr-namespace:ExoPlayerWrapper.Controls"
+             xmlns:converters="clr-namespace:ExoPlayerWrapper.Converters"
+             xmlns:behaviors="clr-namespace:ExoPlayerWrapper.Behaviors"
              mc:Ignorable="d"
              x:Class="ExoPlayerWrapper.Views.MainPage"
              BackgroundColor="Black">
@@ -13,7 +15,9 @@
             <ColumnDefinition Width="1*" />
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
-        <controls:VideoView Grid.ColumnSpan="3" />
+        <controls:VideoView 
+            Grid.ColumnSpan="3"
+            InputTransparent="True" />
         <Button
             Grid.Column="0"
             VerticalOptions="Center"
@@ -44,6 +48,7 @@
             VerticalOptions="End"
             Padding="10">
             <Slider
+                InputTransparent="True"
                 Minimum="0"
                 Maximum="1"
                 MinimumTrackColor="White"
@@ -55,8 +60,15 @@
                 Maximum="1"
                 MinimumTrackColor="#80ff0000"
                 ThumbColor="Red"
-                Value="{Binding SliderValue}"
-            />
+                Value="{Binding SliderValue}">
+                <Slider.Behaviors>
+                    <behaviors:EventToCommandBehavior
+                        EventName="ValueChanged"
+                        EventArgsConverter="{converters:VceToHdv}"
+                        Command="{Binding SliderValueChangedCommand}" />
+                </Slider.Behaviors>
+            </Slider>
+                
         </Grid>
     </Grid>
 </ContentPage>
